--- a/shop/templates/shop/product/product_list.html
+++ b/shop/templates/shop/product/product_list.html
@@ -8,12 +8,13 @@
   <div class="table-responsive">
     <table class="table table-striped">
       <thead>
-        <tr><th>Name</th><th>Price</th><th>Actions</th></tr>
+        <tr><th>Name</th><th>Stock</th><th>Price</th><th>Actions</th></tr>
       </thead>
       <tbody>
         {% for product in products %}
         <tr>
           <td>{{ product.product_name }}</td>
+          <td>{{ product.stock }}</td>
           <td>₦{{ product.price }}</td>
           <td>
             <a href="{% url 'shop:product_detail' product.pk %}" class="btn btn-sm btn-info">View</a>
