--- a/accounts/templates/registration/login.html
+++ b/accounts/templates/registration/login.html
@@ -1,16 +1,13 @@
 {% extends 'base.html' %}
-{% load static %}
+{% load static crispy_forms_tags %}
 
-{% block content%}
-
-<h2>Login</h2>
-
-<form method="post">
-
+{% block content %}
+<div class="container mt-5" style="max-width: 400px;">
+  <h2 class="mb-4 text-center">Login</h2>
+  <form method="post" novalidate>
     {% csrf_token %}
-    {{ form.as_p}}
-
-    <button type="submit">Submit</button>
-</form>
-
-{% endblock content%}
+    {{ form|crispy }}
+    <button type="submit" class="btn btn-primary w-100 mt-3">Submit</button>
+  </form>
+</div>
+{% endblock %}
