--- a/shop/templates/shop/category/category_create.html
+++ b/shop/templates/shop/category/category_create.html
@@ -1,12 +1,20 @@
 {% extends 'dashboard.html' %}
+{% load crispy_forms_tags %}
+
 {% block title %}Create Category{% endblock %}
 
 {% block content %}
-<h2>Create Category</h2>
-<form method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit" class="btn btn-success">Create</button>
-    <a href="{% url 'shop:category_list' %}" class="btn btn-secondary">Cancel</a>
-</form>
+<div class="container mt-4">
+  <h2 class="mb-4">Create Category</h2>
+  <div class="card shadow-sm p-4">
+    <form method="post" novalidate>
+      {% csrf_token %}
+      {{ form|crispy }}
+      <div class="mt-3">
+        <button type="submit" class="btn btn-success">Create</button>
+        <a href="{% url 'shop:category_list' %}" class="btn btn-secondary">Cancel</a>
+      </div>
+    </form>
+  </div>
+</div>
 {% endblock %}
