--- a/shop/templates/shop/product/product_update.html
+++ b/shop/templates/shop/product/product_update.html
@@ -1,12 +1,18 @@
 {% extends 'dashboard.html' %}
+{% load crispy_forms_tags %}
+
 {% block content %}
 <div class="container mt-4">
   <h2>Edit Product: {{ object.name }}</h2>
-  <form method="post" enctype="multipart/form-data" novalidate>
-    {% csrf_token %}
-    {{ form.as_p|safe }}
-    <button type="submit" class="btn btn-warning">Update</button>
-    <a href="{% url 'shop:product_list' %}" class="btn btn-secondary">Back</a>
-  </form>
+  <div class="card shadow-sm p-4">
+    <form method="post" enctype="multipart/form-data" novalidate>
+      {% csrf_token %}
+      {{ form|crispy }}
+      <div class="mt-3">
+        <button type="submit" class="btn btn-warning">Update</button>
+        <a href="{% url 'shop:product_list' %}" class="btn btn-secondary">Back</a>
+      </div>
+    </form>
+  </div>
 </div>
 {% endblock %}
